--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@
 .github
 
 # Docker
-docker-compose.yml
+#docker-compose.yml
 docker-compose.override.yml
 docker-compose.override.yml.example
 .dockerignore
